// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListMenu-snapshot 1`] = `
<ListMenu
  anchorEl={<body />}
  items={
    Array [
      Object {
        "icon": <Memo />,
        "label": "TOP",
        "link": "",
      },
      Object {
        "icon": <Memo />,
        "label": "シフト",
        "link": "",
      },
      Object {
        "icon": <Memo />,
        "label": "勤怠",
        "link": "",
      },
    ]
  }
  setShow={[Function]}
  show={true}
>
  <WithStyles(ForwardRef(MenuItem))
    key="1"
    onClick={[Function]}
  >
    <ForwardRef(MenuItem)
      classes={
        Object {
          "dense": "MuiMenuItem-dense",
          "gutters": "MuiMenuItem-gutters",
          "root": "MuiMenuItem-root",
          "selected": "Mui-selected",
        }
      }
      onClick={[Function]}
    >
      <WithStyles(ForwardRef(ListItem))
        button={true}
        className="MuiMenuItem-root MuiMenuItem-gutters"
        classes={
          Object {
            "dense": "MuiMenuItem-dense",
          }
        }
        component="li"
        disableGutters={false}
        onClick={[Function]}
        role="menuitem"
        tabIndex={-1}
      >
        <ForwardRef(ListItem)
          button={true}
          className="MuiMenuItem-root MuiMenuItem-gutters"
          classes={
            Object {
              "alignItemsFlexStart": "MuiListItem-alignItemsFlexStart",
              "button": "MuiListItem-button",
              "container": "MuiListItem-container",
              "dense": "MuiListItem-dense MuiMenuItem-dense",
              "disabled": "Mui-disabled",
              "divider": "MuiListItem-divider",
              "focusVisible": "Mui-focusVisible",
              "gutters": "MuiListItem-gutters",
              "root": "MuiListItem-root",
              "secondaryAction": "MuiListItem-secondaryAction",
              "selected": "Mui-selected",
            }
          }
          component="li"
          disableGutters={false}
          onClick={[Function]}
          role="menuitem"
          tabIndex={-1}
        >
          <WithStyles(ForwardRef(ButtonBase))
            className="MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
            component="li"
            disabled={false}
            focusVisibleClassName="Mui-focusVisible"
            onClick={[Function]}
            role="menuitem"
            tabIndex={-1}
          >
            <ForwardRef(ButtonBase)
              className="MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              classes={
                Object {
                  "disabled": "Mui-disabled",
                  "focusVisible": "Mui-focusVisible",
                  "root": "MuiButtonBase-root",
                }
              }
              component="li"
              disabled={false}
              focusVisibleClassName="Mui-focusVisible"
              onClick={[Function]}
              role="menuitem"
              tabIndex={-1}
            >
              <li
                aria-disabled={false}
                className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                onBlur={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="menuitem"
                tabIndex={-1}
              >
                <ListMenu__MenuIcon
                  key=".0"
                >
                  <WithStyles(ForwardRef(ListItemIcon))
                    className="ListMenu__MenuIcon-sc-ib7wze-0 kngNHU"
                  >
                    <ForwardRef(ListItemIcon)
                      className="ListMenu__MenuIcon-sc-ib7wze-0 kngNHU"
                      classes={
                        Object {
                          "alignItemsFlexStart": "MuiListItemIcon-alignItemsFlexStart",
                          "root": "MuiListItemIcon-root",
                        }
                      }
                    >
                      <div
                        className="MuiListItemIcon-root ListMenu__MenuIcon-sc-ib7wze-0 kngNHU"
                      >
                        <ForwardRef(HomeWorkIcon)>
                          <WithStyles(ForwardRef(SvgIcon))>
                            <ForwardRef(SvgIcon)
                              classes={
                                Object {
                                  "colorAction": "MuiSvgIcon-colorAction",
                                  "colorDisabled": "MuiSvgIcon-colorDisabled",
                                  "colorError": "MuiSvgIcon-colorError",
                                  "colorPrimary": "MuiSvgIcon-colorPrimary",
                                  "colorSecondary": "MuiSvgIcon-colorSecondary",
                                  "fontSizeInherit": "MuiSvgIcon-fontSizeInherit",
                                  "fontSizeLarge": "MuiSvgIcon-fontSizeLarge",
                                  "fontSizeSmall": "MuiSvgIcon-fontSizeSmall",
                                  "root": "MuiSvgIcon-root",
                                }
                              }
                            >
                              <svg
                                aria-hidden={true}
                                className="MuiSvgIcon-root"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M8.17 5.7L1 10.48V21h5v-8h4v8h5V10.25z"
                                />
                                <path
                                  d="M10 3v1.51l2 1.33L13.73 7H15v.85l2 1.34V11h2v2h-2v2h2v2h-2v4h6V3H10zm9 6h-2V7h2v2z"
                                />
                              </svg>
                            </ForwardRef(SvgIcon)>
                          </WithStyles(ForwardRef(SvgIcon))>
                        </ForwardRef(HomeWorkIcon)>
                      </div>
                    </ForwardRef(ListItemIcon)>
                  </WithStyles(ForwardRef(ListItemIcon))>
                </ListMenu__MenuIcon>
                <ListMenu__MenuText
                  disableTypography={true}
                  key=".1"
                  primary="TOP"
                >
                  <WithStyles(ForwardRef(ListItemText))
                    className="ListMenu__MenuText-sc-ib7wze-1 gkREls"
                    disableTypography={true}
                    primary="TOP"
                  >
                    <ForwardRef(ListItemText)
                      className="ListMenu__MenuText-sc-ib7wze-1 gkREls"
                      classes={
                        Object {
                          "dense": "MuiListItemText-dense",
                          "inset": "MuiListItemText-inset",
                          "multiline": "MuiListItemText-multiline",
                          "primary": "MuiListItemText-primary",
                          "root": "MuiListItemText-root",
                          "secondary": "MuiListItemText-secondary",
                        }
                      }
                      disableTypography={true}
                      primary="TOP"
                    >
                      <div
                        className="MuiListItemText-root ListMenu__MenuText-sc-ib7wze-1 gkREls"
                      >
                        TOP
                      </div>
                    </ForwardRef(ListItemText)>
                  </WithStyles(ForwardRef(ListItemText))>
                </ListMenu__MenuText>
                <WithStyles(memo)
                  center={false}
                >
                  <ForwardRef(TouchRipple)
                    center={false}
                    classes={
                      Object {
                        "child": "MuiTouchRipple-child",
                        "childLeaving": "MuiTouchRipple-childLeaving",
                        "childPulsate": "MuiTouchRipple-childPulsate",
                        "ripple": "MuiTouchRipple-ripple",
                        "ripplePulsate": "MuiTouchRipple-ripplePulsate",
                        "rippleVisible": "MuiTouchRipple-rippleVisible",
                        "root": "MuiTouchRipple-root",
                      }
                    }
                  >
                    <span
                      className="MuiTouchRipple-root"
                    >
                      <TransitionGroup
                        childFactory={[Function]}
                        component={null}
                        exit={true}
                      />
                    </span>
                  </ForwardRef(TouchRipple)>
                </WithStyles(memo)>
              </li>
            </ForwardRef(ButtonBase)>
          </WithStyles(ForwardRef(ButtonBase))>
        </ForwardRef(ListItem)>
      </WithStyles(ForwardRef(ListItem))>
    </ForwardRef(MenuItem)>
  </WithStyles(ForwardRef(MenuItem))>
  <WithStyles(ForwardRef(MenuItem))
    key="2"
    onClick={[Function]}
  >
    <ForwardRef(MenuItem)
      classes={
        Object {
          "dense": "MuiMenuItem-dense",
          "gutters": "MuiMenuItem-gutters",
          "root": "MuiMenuItem-root",
          "selected": "Mui-selected",
        }
      }
      onClick={[Function]}
    >
      <WithStyles(ForwardRef(ListItem))
        button={true}
        className="MuiMenuItem-root MuiMenuItem-gutters"
        classes={
          Object {
            "dense": "MuiMenuItem-dense",
          }
        }
        component="li"
        disableGutters={false}
        onClick={[Function]}
        role="menuitem"
        tabIndex={-1}
      >
        <ForwardRef(ListItem)
          button={true}
          className="MuiMenuItem-root MuiMenuItem-gutters"
          classes={
            Object {
              "alignItemsFlexStart": "MuiListItem-alignItemsFlexStart",
              "button": "MuiListItem-button",
              "container": "MuiListItem-container",
              "dense": "MuiListItem-dense MuiMenuItem-dense",
              "disabled": "Mui-disabled",
              "divider": "MuiListItem-divider",
              "focusVisible": "Mui-focusVisible",
              "gutters": "MuiListItem-gutters",
              "root": "MuiListItem-root",
              "secondaryAction": "MuiListItem-secondaryAction",
              "selected": "Mui-selected",
            }
          }
          component="li"
          disableGutters={false}
          onClick={[Function]}
          role="menuitem"
          tabIndex={-1}
        >
          <WithStyles(ForwardRef(ButtonBase))
            className="MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
            component="li"
            disabled={false}
            focusVisibleClassName="Mui-focusVisible"
            onClick={[Function]}
            role="menuitem"
            tabIndex={-1}
          >
            <ForwardRef(ButtonBase)
              className="MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              classes={
                Object {
                  "disabled": "Mui-disabled",
                  "focusVisible": "Mui-focusVisible",
                  "root": "MuiButtonBase-root",
                }
              }
              component="li"
              disabled={false}
              focusVisibleClassName="Mui-focusVisible"
              onClick={[Function]}
              role="menuitem"
              tabIndex={-1}
            >
              <li
                aria-disabled={false}
                className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                onBlur={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="menuitem"
                tabIndex={-1}
              >
                <ListMenu__MenuIcon
                  key=".0"
                >
                  <WithStyles(ForwardRef(ListItemIcon))
                    className="ListMenu__MenuIcon-sc-ib7wze-0 kngNHU"
                  >
                    <ForwardRef(ListItemIcon)
                      className="ListMenu__MenuIcon-sc-ib7wze-0 kngNHU"
                      classes={
                        Object {
                          "alignItemsFlexStart": "MuiListItemIcon-alignItemsFlexStart",
                          "root": "MuiListItemIcon-root",
                        }
                      }
                    >
                      <div
                        className="MuiListItemIcon-root ListMenu__MenuIcon-sc-ib7wze-0 kngNHU"
                      >
                        <ForwardRef(LibraryBooksIcon)>
                          <WithStyles(ForwardRef(SvgIcon))>
                            <ForwardRef(SvgIcon)
                              classes={
                                Object {
                                  "colorAction": "MuiSvgIcon-colorAction",
                                  "colorDisabled": "MuiSvgIcon-colorDisabled",
                                  "colorError": "MuiSvgIcon-colorError",
                                  "colorPrimary": "MuiSvgIcon-colorPrimary",
                                  "colorSecondary": "MuiSvgIcon-colorSecondary",
                                  "fontSizeInherit": "MuiSvgIcon-fontSizeInherit",
                                  "fontSizeLarge": "MuiSvgIcon-fontSizeLarge",
                                  "fontSizeSmall": "MuiSvgIcon-fontSizeSmall",
                                  "root": "MuiSvgIcon-root",
                                }
                              }
                            >
                              <svg
                                aria-hidden={true}
                                className="MuiSvgIcon-root"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M4 6H2v14c0 1.1.9 2 2 2h14v-2H4V6zm16-4H8c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-1 9H9V9h10v2zm-4 4H9v-2h6v2zm4-8H9V5h10v2z"
                                />
                              </svg>
                            </ForwardRef(SvgIcon)>
                          </WithStyles(ForwardRef(SvgIcon))>
                        </ForwardRef(LibraryBooksIcon)>
                      </div>
                    </ForwardRef(ListItemIcon)>
                  </WithStyles(ForwardRef(ListItemIcon))>
                </ListMenu__MenuIcon>
                <ListMenu__MenuText
                  disableTypography={true}
                  key=".1"
                  primary="シフト"
                >
                  <WithStyles(ForwardRef(ListItemText))
                    className="ListMenu__MenuText-sc-ib7wze-1 gkREls"
                    disableTypography={true}
                    primary="シフト"
                  >
                    <ForwardRef(ListItemText)
                      className="ListMenu__MenuText-sc-ib7wze-1 gkREls"
                      classes={
                        Object {
                          "dense": "MuiListItemText-dense",
                          "inset": "MuiListItemText-inset",
                          "multiline": "MuiListItemText-multiline",
                          "primary": "MuiListItemText-primary",
                          "root": "MuiListItemText-root",
                          "secondary": "MuiListItemText-secondary",
                        }
                      }
                      disableTypography={true}
                      primary="シフト"
                    >
                      <div
                        className="MuiListItemText-root ListMenu__MenuText-sc-ib7wze-1 gkREls"
                      >
                        シフト
                      </div>
                    </ForwardRef(ListItemText)>
                  </WithStyles(ForwardRef(ListItemText))>
                </ListMenu__MenuText>
                <WithStyles(memo)
                  center={false}
                >
                  <ForwardRef(TouchRipple)
                    center={false}
                    classes={
                      Object {
                        "child": "MuiTouchRipple-child",
                        "childLeaving": "MuiTouchRipple-childLeaving",
                        "childPulsate": "MuiTouchRipple-childPulsate",
                        "ripple": "MuiTouchRipple-ripple",
                        "ripplePulsate": "MuiTouchRipple-ripplePulsate",
                        "rippleVisible": "MuiTouchRipple-rippleVisible",
                        "root": "MuiTouchRipple-root",
                      }
                    }
                  >
                    <span
                      className="MuiTouchRipple-root"
                    >
                      <TransitionGroup
                        childFactory={[Function]}
                        component={null}
                        exit={true}
                      />
                    </span>
                  </ForwardRef(TouchRipple)>
                </WithStyles(memo)>
              </li>
            </ForwardRef(ButtonBase)>
          </WithStyles(ForwardRef(ButtonBase))>
        </ForwardRef(ListItem)>
      </WithStyles(ForwardRef(ListItem))>
    </ForwardRef(MenuItem)>
  </WithStyles(ForwardRef(MenuItem))>
  <WithStyles(ForwardRef(MenuItem))
    key="3"
    onClick={[Function]}
  >
    <ForwardRef(MenuItem)
      classes={
        Object {
          "dense": "MuiMenuItem-dense",
          "gutters": "MuiMenuItem-gutters",
          "root": "MuiMenuItem-root",
          "selected": "Mui-selected",
        }
      }
      onClick={[Function]}
    >
      <WithStyles(ForwardRef(ListItem))
        button={true}
        className="MuiMenuItem-root MuiMenuItem-gutters"
        classes={
          Object {
            "dense": "MuiMenuItem-dense",
          }
        }
        component="li"
        disableGutters={false}
        onClick={[Function]}
        role="menuitem"
        tabIndex={-1}
      >
        <ForwardRef(ListItem)
          button={true}
          className="MuiMenuItem-root MuiMenuItem-gutters"
          classes={
            Object {
              "alignItemsFlexStart": "MuiListItem-alignItemsFlexStart",
              "button": "MuiListItem-button",
              "container": "MuiListItem-container",
              "dense": "MuiListItem-dense MuiMenuItem-dense",
              "disabled": "Mui-disabled",
              "divider": "MuiListItem-divider",
              "focusVisible": "Mui-focusVisible",
              "gutters": "MuiListItem-gutters",
              "root": "MuiListItem-root",
              "secondaryAction": "MuiListItem-secondaryAction",
              "selected": "Mui-selected",
            }
          }
          component="li"
          disableGutters={false}
          onClick={[Function]}
          role="menuitem"
          tabIndex={-1}
        >
          <WithStyles(ForwardRef(ButtonBase))
            className="MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
            component="li"
            disabled={false}
            focusVisibleClassName="Mui-focusVisible"
            onClick={[Function]}
            role="menuitem"
            tabIndex={-1}
          >
            <ForwardRef(ButtonBase)
              className="MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              classes={
                Object {
                  "disabled": "Mui-disabled",
                  "focusVisible": "Mui-focusVisible",
                  "root": "MuiButtonBase-root",
                }
              }
              component="li"
              disabled={false}
              focusVisibleClassName="Mui-focusVisible"
              onClick={[Function]}
              role="menuitem"
              tabIndex={-1}
            >
              <li
                aria-disabled={false}
                className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                onBlur={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="menuitem"
                tabIndex={-1}
              >
                <ListMenu__MenuIcon
                  key=".0"
                >
                  <WithStyles(ForwardRef(ListItemIcon))
                    className="ListMenu__MenuIcon-sc-ib7wze-0 kngNHU"
                  >
                    <ForwardRef(ListItemIcon)
                      className="ListMenu__MenuIcon-sc-ib7wze-0 kngNHU"
                      classes={
                        Object {
                          "alignItemsFlexStart": "MuiListItemIcon-alignItemsFlexStart",
                          "root": "MuiListItemIcon-root",
                        }
                      }
                    >
                      <div
                        className="MuiListItemIcon-root ListMenu__MenuIcon-sc-ib7wze-0 kngNHU"
                      >
                        <ForwardRef(AssessmentIcon)>
                          <WithStyles(ForwardRef(SvgIcon))>
                            <ForwardRef(SvgIcon)
                              classes={
                                Object {
                                  "colorAction": "MuiSvgIcon-colorAction",
                                  "colorDisabled": "MuiSvgIcon-colorDisabled",
                                  "colorError": "MuiSvgIcon-colorError",
                                  "colorPrimary": "MuiSvgIcon-colorPrimary",
                                  "colorSecondary": "MuiSvgIcon-colorSecondary",
                                  "fontSizeInherit": "MuiSvgIcon-fontSizeInherit",
                                  "fontSizeLarge": "MuiSvgIcon-fontSizeLarge",
                                  "fontSizeSmall": "MuiSvgIcon-fontSizeSmall",
                                  "root": "MuiSvgIcon-root",
                                }
                              }
                            >
                              <svg
                                aria-hidden={true}
                                className="MuiSvgIcon-root"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"
                                />
                              </svg>
                            </ForwardRef(SvgIcon)>
                          </WithStyles(ForwardRef(SvgIcon))>
                        </ForwardRef(AssessmentIcon)>
                      </div>
                    </ForwardRef(ListItemIcon)>
                  </WithStyles(ForwardRef(ListItemIcon))>
                </ListMenu__MenuIcon>
                <ListMenu__MenuText
                  disableTypography={true}
                  key=".1"
                  primary="勤怠"
                >
                  <WithStyles(ForwardRef(ListItemText))
                    className="ListMenu__MenuText-sc-ib7wze-1 gkREls"
                    disableTypography={true}
                    primary="勤怠"
                  >
                    <ForwardRef(ListItemText)
                      className="ListMenu__MenuText-sc-ib7wze-1 gkREls"
                      classes={
                        Object {
                          "dense": "MuiListItemText-dense",
                          "inset": "MuiListItemText-inset",
                          "multiline": "MuiListItemText-multiline",
                          "primary": "MuiListItemText-primary",
                          "root": "MuiListItemText-root",
                          "secondary": "MuiListItemText-secondary",
                        }
                      }
                      disableTypography={true}
                      primary="勤怠"
                    >
                      <div
                        className="MuiListItemText-root ListMenu__MenuText-sc-ib7wze-1 gkREls"
                      >
                        勤怠
                      </div>
                    </ForwardRef(ListItemText)>
                  </WithStyles(ForwardRef(ListItemText))>
                </ListMenu__MenuText>
                <WithStyles(memo)
                  center={false}
                >
                  <ForwardRef(TouchRipple)
                    center={false}
                    classes={
                      Object {
                        "child": "MuiTouchRipple-child",
                        "childLeaving": "MuiTouchRipple-childLeaving",
                        "childPulsate": "MuiTouchRipple-childPulsate",
                        "ripple": "MuiTouchRipple-ripple",
                        "ripplePulsate": "MuiTouchRipple-ripplePulsate",
                        "rippleVisible": "MuiTouchRipple-rippleVisible",
                        "root": "MuiTouchRipple-root",
                      }
                    }
                  >
                    <span
                      className="MuiTouchRipple-root"
                    >
                      <TransitionGroup
                        childFactory={[Function]}
                        component={null}
                        exit={true}
                      />
                    </span>
                  </ForwardRef(TouchRipple)>
                </WithStyles(memo)>
              </li>
            </ForwardRef(ButtonBase)>
          </WithStyles(ForwardRef(ButtonBase))>
        </ForwardRef(ListItem)>
      </WithStyles(ForwardRef(ListItem))>
    </ForwardRef(MenuItem)>
  </WithStyles(ForwardRef(MenuItem))>
</ListMenu>
`;

exports[`ListMenu-snapshot 2`] = `
<ListMenu
  anchorEl={<body />}
  delimeterPosition={
    Array [
      1,
    ]
  }
  items={
    Array [
      Object {
        "icon": <Memo />,
        "label": "TOP",
        "link": "",
      },
      Object {
        "icon": <Memo />,
        "label": "シフト",
        "link": "",
      },
      Object {
        "icon": <Memo />,
        "label": "勤怠",
        "link": "",
      },
    ]
  }
  placement="bottom-end"
  setShow={[Function]}
  show={true}
>
  <WithStyles(ForwardRef(MenuItem))
    key="1"
    onClick={[Function]}
  >
    <ForwardRef(MenuItem)
      classes={
        Object {
          "dense": "MuiMenuItem-dense",
          "gutters": "MuiMenuItem-gutters",
          "root": "MuiMenuItem-root",
          "selected": "Mui-selected",
        }
      }
      onClick={[Function]}
    >
      <WithStyles(ForwardRef(ListItem))
        button={true}
        className="MuiMenuItem-root MuiMenuItem-gutters"
        classes={
          Object {
            "dense": "MuiMenuItem-dense",
          }
        }
        component="li"
        disableGutters={false}
        onClick={[Function]}
        role="menuitem"
        tabIndex={-1}
      >
        <ForwardRef(ListItem)
          button={true}
          className="MuiMenuItem-root MuiMenuItem-gutters"
          classes={
            Object {
              "alignItemsFlexStart": "MuiListItem-alignItemsFlexStart",
              "button": "MuiListItem-button",
              "container": "MuiListItem-container",
              "dense": "MuiListItem-dense MuiMenuItem-dense",
              "disabled": "Mui-disabled",
              "divider": "MuiListItem-divider",
              "focusVisible": "Mui-focusVisible",
              "gutters": "MuiListItem-gutters",
              "root": "MuiListItem-root",
              "secondaryAction": "MuiListItem-secondaryAction",
              "selected": "Mui-selected",
            }
          }
          component="li"
          disableGutters={false}
          onClick={[Function]}
          role="menuitem"
          tabIndex={-1}
        >
          <WithStyles(ForwardRef(ButtonBase))
            className="MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
            component="li"
            disabled={false}
            focusVisibleClassName="Mui-focusVisible"
            onClick={[Function]}
            role="menuitem"
            tabIndex={-1}
          >
            <ForwardRef(ButtonBase)
              className="MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              classes={
                Object {
                  "disabled": "Mui-disabled",
                  "focusVisible": "Mui-focusVisible",
                  "root": "MuiButtonBase-root",
                }
              }
              component="li"
              disabled={false}
              focusVisibleClassName="Mui-focusVisible"
              onClick={[Function]}
              role="menuitem"
              tabIndex={-1}
            >
              <li
                aria-disabled={false}
                className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                onBlur={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="menuitem"
                tabIndex={-1}
              >
                <ListMenu__MenuIcon
                  key=".0"
                >
                  <WithStyles(ForwardRef(ListItemIcon))
                    className="ListMenu__MenuIcon-sc-ib7wze-0 kngNHU"
                  >
                    <ForwardRef(ListItemIcon)
                      className="ListMenu__MenuIcon-sc-ib7wze-0 kngNHU"
                      classes={
                        Object {
                          "alignItemsFlexStart": "MuiListItemIcon-alignItemsFlexStart",
                          "root": "MuiListItemIcon-root",
                        }
                      }
                    >
                      <div
                        className="MuiListItemIcon-root ListMenu__MenuIcon-sc-ib7wze-0 kngNHU"
                      >
                        <ForwardRef(HomeWorkIcon)>
                          <WithStyles(ForwardRef(SvgIcon))>
                            <ForwardRef(SvgIcon)
                              classes={
                                Object {
                                  "colorAction": "MuiSvgIcon-colorAction",
                                  "colorDisabled": "MuiSvgIcon-colorDisabled",
                                  "colorError": "MuiSvgIcon-colorError",
                                  "colorPrimary": "MuiSvgIcon-colorPrimary",
                                  "colorSecondary": "MuiSvgIcon-colorSecondary",
                                  "fontSizeInherit": "MuiSvgIcon-fontSizeInherit",
                                  "fontSizeLarge": "MuiSvgIcon-fontSizeLarge",
                                  "fontSizeSmall": "MuiSvgIcon-fontSizeSmall",
                                  "root": "MuiSvgIcon-root",
                                }
                              }
                            >
                              <svg
                                aria-hidden={true}
                                className="MuiSvgIcon-root"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M8.17 5.7L1 10.48V21h5v-8h4v8h5V10.25z"
                                />
                                <path
                                  d="M10 3v1.51l2 1.33L13.73 7H15v.85l2 1.34V11h2v2h-2v2h2v2h-2v4h6V3H10zm9 6h-2V7h2v2z"
                                />
                              </svg>
                            </ForwardRef(SvgIcon)>
                          </WithStyles(ForwardRef(SvgIcon))>
                        </ForwardRef(HomeWorkIcon)>
                      </div>
                    </ForwardRef(ListItemIcon)>
                  </WithStyles(ForwardRef(ListItemIcon))>
                </ListMenu__MenuIcon>
                <ListMenu__MenuText
                  disableTypography={true}
                  key=".1"
                  primary="TOP"
                >
                  <WithStyles(ForwardRef(ListItemText))
                    className="ListMenu__MenuText-sc-ib7wze-1 gkREls"
                    disableTypography={true}
                    primary="TOP"
                  >
                    <ForwardRef(ListItemText)
                      className="ListMenu__MenuText-sc-ib7wze-1 gkREls"
                      classes={
                        Object {
                          "dense": "MuiListItemText-dense",
                          "inset": "MuiListItemText-inset",
                          "multiline": "MuiListItemText-multiline",
                          "primary": "MuiListItemText-primary",
                          "root": "MuiListItemText-root",
                          "secondary": "MuiListItemText-secondary",
                        }
                      }
                      disableTypography={true}
                      primary="TOP"
                    >
                      <div
                        className="MuiListItemText-root ListMenu__MenuText-sc-ib7wze-1 gkREls"
                      >
                        TOP
                      </div>
                    </ForwardRef(ListItemText)>
                  </WithStyles(ForwardRef(ListItemText))>
                </ListMenu__MenuText>
                <WithStyles(memo)
                  center={false}
                >
                  <ForwardRef(TouchRipple)
                    center={false}
                    classes={
                      Object {
                        "child": "MuiTouchRipple-child",
                        "childLeaving": "MuiTouchRipple-childLeaving",
                        "childPulsate": "MuiTouchRipple-childPulsate",
                        "ripple": "MuiTouchRipple-ripple",
                        "ripplePulsate": "MuiTouchRipple-ripplePulsate",
                        "rippleVisible": "MuiTouchRipple-rippleVisible",
                        "root": "MuiTouchRipple-root",
                      }
                    }
                  >
                    <span
                      className="MuiTouchRipple-root"
                    >
                      <TransitionGroup
                        childFactory={[Function]}
                        component={null}
                        exit={true}
                      />
                    </span>
                  </ForwardRef(TouchRipple)>
                </WithStyles(memo)>
              </li>
            </ForwardRef(ButtonBase)>
          </WithStyles(ForwardRef(ButtonBase))>
        </ForwardRef(ListItem)>
      </WithStyles(ForwardRef(ListItem))>
    </ForwardRef(MenuItem)>
  </WithStyles(ForwardRef(MenuItem))>
  <WithStyles(ForwardRef(MenuItem))
    key="2"
    onClick={[Function]}
  >
    <ForwardRef(MenuItem)
      classes={
        Object {
          "dense": "MuiMenuItem-dense",
          "gutters": "MuiMenuItem-gutters",
          "root": "MuiMenuItem-root",
          "selected": "Mui-selected",
        }
      }
      onClick={[Function]}
    >
      <WithStyles(ForwardRef(ListItem))
        button={true}
        className="MuiMenuItem-root MuiMenuItem-gutters"
        classes={
          Object {
            "dense": "MuiMenuItem-dense",
          }
        }
        component="li"
        disableGutters={false}
        onClick={[Function]}
        role="menuitem"
        tabIndex={-1}
      >
        <ForwardRef(ListItem)
          button={true}
          className="MuiMenuItem-root MuiMenuItem-gutters"
          classes={
            Object {
              "alignItemsFlexStart": "MuiListItem-alignItemsFlexStart",
              "button": "MuiListItem-button",
              "container": "MuiListItem-container",
              "dense": "MuiListItem-dense MuiMenuItem-dense",
              "disabled": "Mui-disabled",
              "divider": "MuiListItem-divider",
              "focusVisible": "Mui-focusVisible",
              "gutters": "MuiListItem-gutters",
              "root": "MuiListItem-root",
              "secondaryAction": "MuiListItem-secondaryAction",
              "selected": "Mui-selected",
            }
          }
          component="li"
          disableGutters={false}
          onClick={[Function]}
          role="menuitem"
          tabIndex={-1}
        >
          <WithStyles(ForwardRef(ButtonBase))
            className="MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
            component="li"
            disabled={false}
            focusVisibleClassName="Mui-focusVisible"
            onClick={[Function]}
            role="menuitem"
            tabIndex={-1}
          >
            <ForwardRef(ButtonBase)
              className="MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              classes={
                Object {
                  "disabled": "Mui-disabled",
                  "focusVisible": "Mui-focusVisible",
                  "root": "MuiButtonBase-root",
                }
              }
              component="li"
              disabled={false}
              focusVisibleClassName="Mui-focusVisible"
              onClick={[Function]}
              role="menuitem"
              tabIndex={-1}
            >
              <li
                aria-disabled={false}
                className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                onBlur={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="menuitem"
                tabIndex={-1}
              >
                <ListMenu__MenuIcon
                  key=".0"
                >
                  <WithStyles(ForwardRef(ListItemIcon))
                    className="ListMenu__MenuIcon-sc-ib7wze-0 kngNHU"
                  >
                    <ForwardRef(ListItemIcon)
                      className="ListMenu__MenuIcon-sc-ib7wze-0 kngNHU"
                      classes={
                        Object {
                          "alignItemsFlexStart": "MuiListItemIcon-alignItemsFlexStart",
                          "root": "MuiListItemIcon-root",
                        }
                      }
                    >
                      <div
                        className="MuiListItemIcon-root ListMenu__MenuIcon-sc-ib7wze-0 kngNHU"
                      >
                        <ForwardRef(LibraryBooksIcon)>
                          <WithStyles(ForwardRef(SvgIcon))>
                            <ForwardRef(SvgIcon)
                              classes={
                                Object {
                                  "colorAction": "MuiSvgIcon-colorAction",
                                  "colorDisabled": "MuiSvgIcon-colorDisabled",
                                  "colorError": "MuiSvgIcon-colorError",
                                  "colorPrimary": "MuiSvgIcon-colorPrimary",
                                  "colorSecondary": "MuiSvgIcon-colorSecondary",
                                  "fontSizeInherit": "MuiSvgIcon-fontSizeInherit",
                                  "fontSizeLarge": "MuiSvgIcon-fontSizeLarge",
                                  "fontSizeSmall": "MuiSvgIcon-fontSizeSmall",
                                  "root": "MuiSvgIcon-root",
                                }
                              }
                            >
                              <svg
                                aria-hidden={true}
                                className="MuiSvgIcon-root"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M4 6H2v14c0 1.1.9 2 2 2h14v-2H4V6zm16-4H8c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-1 9H9V9h10v2zm-4 4H9v-2h6v2zm4-8H9V5h10v2z"
                                />
                              </svg>
                            </ForwardRef(SvgIcon)>
                          </WithStyles(ForwardRef(SvgIcon))>
                        </ForwardRef(LibraryBooksIcon)>
                      </div>
                    </ForwardRef(ListItemIcon)>
                  </WithStyles(ForwardRef(ListItemIcon))>
                </ListMenu__MenuIcon>
                <ListMenu__MenuText
                  disableTypography={true}
                  key=".1"
                  primary="シフト"
                >
                  <WithStyles(ForwardRef(ListItemText))
                    className="ListMenu__MenuText-sc-ib7wze-1 gkREls"
                    disableTypography={true}
                    primary="シフト"
                  >
                    <ForwardRef(ListItemText)
                      className="ListMenu__MenuText-sc-ib7wze-1 gkREls"
                      classes={
                        Object {
                          "dense": "MuiListItemText-dense",
                          "inset": "MuiListItemText-inset",
                          "multiline": "MuiListItemText-multiline",
                          "primary": "MuiListItemText-primary",
                          "root": "MuiListItemText-root",
                          "secondary": "MuiListItemText-secondary",
                        }
                      }
                      disableTypography={true}
                      primary="シフト"
                    >
                      <div
                        className="MuiListItemText-root ListMenu__MenuText-sc-ib7wze-1 gkREls"
                      >
                        シフト
                      </div>
                    </ForwardRef(ListItemText)>
                  </WithStyles(ForwardRef(ListItemText))>
                </ListMenu__MenuText>
                <ListMenu__MenuDivider
                  key=".2"
                >
                  <WithStyles(ForwardRef(Divider))
                    className="ListMenu__MenuDivider-sc-ib7wze-2 gyOzXm"
                  >
                    <ForwardRef(Divider)
                      className="ListMenu__MenuDivider-sc-ib7wze-2 gyOzXm"
                      classes={
                        Object {
                          "absolute": "MuiDivider-absolute",
                          "flexItem": "MuiDivider-flexItem",
                          "inset": "MuiDivider-inset",
                          "light": "MuiDivider-light",
                          "middle": "MuiDivider-middle",
                          "root": "MuiDivider-root",
                          "vertical": "MuiDivider-vertical",
                        }
                      }
                    >
                      <hr
                        className="MuiDivider-root ListMenu__MenuDivider-sc-ib7wze-2 gyOzXm"
                      />
                    </ForwardRef(Divider)>
                  </WithStyles(ForwardRef(Divider))>
                </ListMenu__MenuDivider>
                <WithStyles(memo)
                  center={false}
                >
                  <ForwardRef(TouchRipple)
                    center={false}
                    classes={
                      Object {
                        "child": "MuiTouchRipple-child",
                        "childLeaving": "MuiTouchRipple-childLeaving",
                        "childPulsate": "MuiTouchRipple-childPulsate",
                        "ripple": "MuiTouchRipple-ripple",
                        "ripplePulsate": "MuiTouchRipple-ripplePulsate",
                        "rippleVisible": "MuiTouchRipple-rippleVisible",
                        "root": "MuiTouchRipple-root",
                      }
                    }
                  >
                    <span
                      className="MuiTouchRipple-root"
                    >
                      <TransitionGroup
                        childFactory={[Function]}
                        component={null}
                        exit={true}
                      />
                    </span>
                  </ForwardRef(TouchRipple)>
                </WithStyles(memo)>
              </li>
            </ForwardRef(ButtonBase)>
          </WithStyles(ForwardRef(ButtonBase))>
        </ForwardRef(ListItem)>
      </WithStyles(ForwardRef(ListItem))>
    </ForwardRef(MenuItem)>
  </WithStyles(ForwardRef(MenuItem))>
  <ListMenu__MenuDivider
    key="3"
  >
    <WithStyles(ForwardRef(Divider))
      className="ListMenu__MenuDivider-sc-ib7wze-2 gyOzXm"
    >
      <ForwardRef(Divider)
        className="ListMenu__MenuDivider-sc-ib7wze-2 gyOzXm"
        classes={
          Object {
            "absolute": "MuiDivider-absolute",
            "flexItem": "MuiDivider-flexItem",
            "inset": "MuiDivider-inset",
            "light": "MuiDivider-light",
            "middle": "MuiDivider-middle",
            "root": "MuiDivider-root",
            "vertical": "MuiDivider-vertical",
          }
        }
      >
        <hr
          className="MuiDivider-root ListMenu__MenuDivider-sc-ib7wze-2 gyOzXm"
        />
      </ForwardRef(Divider)>
    </WithStyles(ForwardRef(Divider))>
  </ListMenu__MenuDivider>
  <WithStyles(ForwardRef(MenuItem))
    key="4"
    onClick={[Function]}
  >
    <ForwardRef(MenuItem)
      classes={
        Object {
          "dense": "MuiMenuItem-dense",
          "gutters": "MuiMenuItem-gutters",
          "root": "MuiMenuItem-root",
          "selected": "Mui-selected",
        }
      }
      onClick={[Function]}
    >
      <WithStyles(ForwardRef(ListItem))
        button={true}
        className="MuiMenuItem-root MuiMenuItem-gutters"
        classes={
          Object {
            "dense": "MuiMenuItem-dense",
          }
        }
        component="li"
        disableGutters={false}
        onClick={[Function]}
        role="menuitem"
        tabIndex={-1}
      >
        <ForwardRef(ListItem)
          button={true}
          className="MuiMenuItem-root MuiMenuItem-gutters"
          classes={
            Object {
              "alignItemsFlexStart": "MuiListItem-alignItemsFlexStart",
              "button": "MuiListItem-button",
              "container": "MuiListItem-container",
              "dense": "MuiListItem-dense MuiMenuItem-dense",
              "disabled": "Mui-disabled",
              "divider": "MuiListItem-divider",
              "focusVisible": "Mui-focusVisible",
              "gutters": "MuiListItem-gutters",
              "root": "MuiListItem-root",
              "secondaryAction": "MuiListItem-secondaryAction",
              "selected": "Mui-selected",
            }
          }
          component="li"
          disableGutters={false}
          onClick={[Function]}
          role="menuitem"
          tabIndex={-1}
        >
          <WithStyles(ForwardRef(ButtonBase))
            className="MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
            component="li"
            disabled={false}
            focusVisibleClassName="Mui-focusVisible"
            onClick={[Function]}
            role="menuitem"
            tabIndex={-1}
          >
            <ForwardRef(ButtonBase)
              className="MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              classes={
                Object {
                  "disabled": "Mui-disabled",
                  "focusVisible": "Mui-focusVisible",
                  "root": "MuiButtonBase-root",
                }
              }
              component="li"
              disabled={false}
              focusVisibleClassName="Mui-focusVisible"
              onClick={[Function]}
              role="menuitem"
              tabIndex={-1}
            >
              <li
                aria-disabled={false}
                className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                onBlur={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="menuitem"
                tabIndex={-1}
              >
                <ListMenu__MenuIcon
                  key=".0"
                >
                  <WithStyles(ForwardRef(ListItemIcon))
                    className="ListMenu__MenuIcon-sc-ib7wze-0 kngNHU"
                  >
                    <ForwardRef(ListItemIcon)
                      className="ListMenu__MenuIcon-sc-ib7wze-0 kngNHU"
                      classes={
                        Object {
                          "alignItemsFlexStart": "MuiListItemIcon-alignItemsFlexStart",
                          "root": "MuiListItemIcon-root",
                        }
                      }
                    >
                      <div
                        className="MuiListItemIcon-root ListMenu__MenuIcon-sc-ib7wze-0 kngNHU"
                      >
                        <ForwardRef(AssessmentIcon)>
                          <WithStyles(ForwardRef(SvgIcon))>
                            <ForwardRef(SvgIcon)
                              classes={
                                Object {
                                  "colorAction": "MuiSvgIcon-colorAction",
                                  "colorDisabled": "MuiSvgIcon-colorDisabled",
                                  "colorError": "MuiSvgIcon-colorError",
                                  "colorPrimary": "MuiSvgIcon-colorPrimary",
                                  "colorSecondary": "MuiSvgIcon-colorSecondary",
                                  "fontSizeInherit": "MuiSvgIcon-fontSizeInherit",
                                  "fontSizeLarge": "MuiSvgIcon-fontSizeLarge",
                                  "fontSizeSmall": "MuiSvgIcon-fontSizeSmall",
                                  "root": "MuiSvgIcon-root",
                                }
                              }
                            >
                              <svg
                                aria-hidden={true}
                                className="MuiSvgIcon-root"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"
                                />
                              </svg>
                            </ForwardRef(SvgIcon)>
                          </WithStyles(ForwardRef(SvgIcon))>
                        </ForwardRef(AssessmentIcon)>
                      </div>
                    </ForwardRef(ListItemIcon)>
                  </WithStyles(ForwardRef(ListItemIcon))>
                </ListMenu__MenuIcon>
                <ListMenu__MenuText
                  disableTypography={true}
                  key=".1"
                  primary="勤怠"
                >
                  <WithStyles(ForwardRef(ListItemText))
                    className="ListMenu__MenuText-sc-ib7wze-1 gkREls"
                    disableTypography={true}
                    primary="勤怠"
                  >
                    <ForwardRef(ListItemText)
                      className="ListMenu__MenuText-sc-ib7wze-1 gkREls"
                      classes={
                        Object {
                          "dense": "MuiListItemText-dense",
                          "inset": "MuiListItemText-inset",
                          "multiline": "MuiListItemText-multiline",
                          "primary": "MuiListItemText-primary",
                          "root": "MuiListItemText-root",
                          "secondary": "MuiListItemText-secondary",
                        }
                      }
                      disableTypography={true}
                      primary="勤怠"
                    >
                      <div
                        className="MuiListItemText-root ListMenu__MenuText-sc-ib7wze-1 gkREls"
                      >
                        勤怠
                      </div>
                    </ForwardRef(ListItemText)>
                  </WithStyles(ForwardRef(ListItemText))>
                </ListMenu__MenuText>
              </li>
            </ForwardRef(ButtonBase)>
          </WithStyles(ForwardRef(ButtonBase))>
        </ForwardRef(ListItem)>
      </WithStyles(ForwardRef(ListItem))>
    </ForwardRef(MenuItem)>
  </WithStyles(ForwardRef(MenuItem))>
</ListMenu>
`;
